# arti-spotify

./: .clangd  .gitignore  CMakeLists.txt  readme.md
.arti/ws/: launch.lua  state.lua  tasks.lua
dependencies/: dependencies.cmake
src/app/: CMakeLists.txt  main.cpp
src/app/configured_files/: config.hpp.in
src/app/include/: error.hpp  image.hpp  overload_set.hpp  player_state.hpp
src/app/include/async/: context.hpp  schedule_policy.hpp  thread_pool.hpp
src/app/include/screens/: player.hpp
src/lib/: CMakeLists.txt
src/lib/curl/: CMakeLists.txt
src/lib/curl/configured_files/: CMakeLists.txt  info.hpp.in
src/lib/curl/include/arti/curl/: client.hpp  connection.hpp  error.hpp
src/lib/curl/src/: client.cpp  connection.cpp
src/lib/spotify/: CMakeLists.txt
src/lib/spotify/include/arti/spotify/: client.hpp  config.hpp  response.hpp  token.hpp  utils.hpp
src/lib/spotify/src/: client.cpp  token.cpp  utils.cpp
